# opencv201907

./: .gitignore  CMakeLists.txt  README.md  __init__.py  api.py  settings.py  urls.py  wsgi.py
core/: CMakeLists.txt  dir.cc  download.cc  string.cc
docs/: image_to_sketch.md
id-ocr/: .gitignore  CMakeLists.txt
id-ocr/include/: format.hpp  log.hpp  pretreatment.hpp
id-ocr/source/main/: CMakeLists.txt  main.cc
id-ocr/source/utils/: CMakeLists.txt  angle.cc  format.cc  rotation.cc
image_to_sketch/: .gitignore  CMakeLists.txt  ImageToSketch  api.py  its.cbp
image_to_sketch/docs/: image_to_sketch.md
image_to_sketch/include/: dir.hpp  download.hpp  log.hpp  process.hpp
image_to_sketch/source/main/: CMakeLists.txt  main.cc
image_to_sketch/source/utils/: CMakeLists.txt  dir.cc  download.cc  process.cc
include/: CMakeLists.txt  dir.hpp  dlcv_its.hpp  dlcv_ocr.hpp  dlcv_vc.hpp  download.hpp  log.hpp  string.hpp
its/: CMakeLists.txt  dir.cc  dlcv_its.cc  download.cc
source/: CMakeLists.txt  its.cc  ocr.cc  vc.cc
utils/: CMakeLists.txt  dlcv_its.cc  dlcv_ocr.cc  dlcv_vc.cc  view_api.py
vc/: CMakeLists.txt  dir.cc  dlcv_vc.cc  download.cc
video_cover/: .gitignore  CMakeLists.txt  VideoCover  api.py
video_cover/doc/: __init__.py
video_cover/example/: demo.cpp  quick_run.sh  smile.py  test.cpp
video_cover/include/: detect.hpp  dir.hpp  download.hpp  log.hpp  process.hpp
video_cover/source/: main.cc
video_cover/thrid_party/keyframe_extract/: keyframes_extract.py  keyframes_extract_diff.py
video_cover/thrid_party/rewrite_video/: image_to_video.py  video_to_image.py
video_cover/thrid_party/smile_detection/: run.cpp
